--- a/proyecto2.html
+++ b/proyecto2.html
@@ -304,7 +304,9 @@
 								y así asegurarse de llegar a un <b>trato justo</b> con el ofertante.
 
 
-
+							</p>
+							<p>
+								Liga al repositorio con el código: <a href=https://github.com/OmarPolC/Analisis_Inmuebles_CDMX>Análisis Inmuebles</a>
 
 
 
