--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Portafolios - Omar Polanco</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,9 +19,9 @@
 					<a href="#" class="image avatar"><img src="images/foto omar.jpeg" alt="" /></a>
 					<h1><strong>¡Hola! Soy Omar Polanco.</strong></h1>  
 					<h1>Estudio
-					Estudio Ingeniería Industrial en el Tecnológico de Monterrey.
-					Me apasiona usar análisis de datos para tomar decisiones
-					<a href="http://html5up.net"></a>.</h1>
+					Estudio Ingeniería Industrial y de Sistemas en el Tecnológico de Monterrey.
+					Me apasiona usar análisis de datos para tomar decisiones.
+					<a href="http://html5up.net"></a></h1>
 		
 				</div>
 			</header>
@@ -42,7 +42,7 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/covid.jpg" class="image fit thumb"><img src="images/thumbs/covid.jpg" /></a>
-								<a href='https://public.tableau.com/app/profile/omar.polanco.c.zares/viz/DashboardCovid_16742787518420/DashboardCovid'>Dashboard Covid con Tableau</a>
+								<a href='https://public.tableau.com/app/profile/omar.polanco.c.zares/viz/DashboardCovid_16742787518420/DashboardCovid' target="_blank">Dashboard Covid con Tableau</a>
 								<p>Utilicé una base de datos con los casos de Covid-19 en México
 									hasta 2020 para crear un Dashboard que permita comprender cómo
 									esta enfermedad afectó al país.
@@ -50,11 +50,28 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/cdmx.jpg" class="image fit thumb"><img src="images/thumbs/cdmx.jpg" alt="" /></a>
-								<a href="proyecto2.html">Predicción de precios inmobiliarios con Python</a>
+								<a href="proyecto2.html" target="_blank">Predicción de precios inmobiliarios con Python</a>
 								<p>Hice Web Scraping del portal en línea Lamudi para
 									analizar el mercado inmobiliario en la Ciudad de México.
 									Entrené un modelo que permite predecir el precio comercial de 
 									una vivienda en función de sus características.
+								</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/thumbs/musica.jpg" class="image fit thumb"><img src="images/thumbs/musica.jpg" alt="" /></a>
+								<a href="proyecto3.html" target="_blank">Análisis de música rock con Python</a>
+								<p>Usé el API de Spotify y el módulo Spotipy para obtener una
+									muestra aleatoria de 1800 canciones de Rock de seis décadas desde los 1970s hasta 
+									los 2020s. Utilicé estadística inferencial para obtener conclusiones acerca de 
+									la población y realicé un modelo de regresión lineal y otro de regresión logística.
+								</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/thumbs/desigualdad.jpg" class="image fit thumb"><img src="images/thumbs/desigualdad.jpg" alt="" /></a>
+								<a href="proyecto3.html" target="_blank">Exploración de clases sociales en México con SQL</a>
+								<p>Obtuve datos de la Encuesta Nacional de Ingresos y Gastos de los Hogares 2020, 
+									realizada por el INEGI. Utilicé PostgreSQL para consultar la base de datos y 
+									explorar las diferencias sociales, económicas y laborales entre los mexicanos.  
 								</p>
 							</article>
 						</div>
