--- a/proyecto2.html
+++ b/proyecto2.html
@@ -49,7 +49,7 @@
 								Como adulto joven que pronto buscará un
 								hogar propio, estoy interesado en entender qué tipo de vivienda sería adecuada
 								a mis necesidades y presupuesto.
-								Por eso, en este proyecto analicé el <b> mercado inmobiliario</b> de la 
+								Por eso, en este proyecto utilicé Python para analizar el <b> mercado inmobiliario</b> de la 
 								Ciudad de México. El propósito de este trabajo es crear un modelo que permita
 								<b> predecir el precio comercial</b> de un imueble con base en sus características.
 								
@@ -87,8 +87,8 @@
 							<p>
 								La Ciudad de México tiene zonas que se ajustan a distintos presupuestos.
 								Iztacalco es la alcaldía con precios más accesibles, ya que ahí un departamento
-								de precio medio cuesta 1.9 millones de pesos, mientras que por una casa tendríamos
-								que invertir cerca de 2.5 millones. Otras demarcaciones con precios parecidos son Iztapalapa y Vensutiano Carranza. 
+								de precio medio cuesta <b>1.9 millones</b> de pesos, mientras que por una casa tendríamos
+								que invertir cerca de <b>2.5 millones</b>. Otras demarcaciones con precios parecidos son Iztapalapa y Vensutiano Carranza. 
 						
 
 
@@ -167,7 +167,7 @@
 							<p>
 								Encontramos que hay rentas tan bajas como <b>3 mil</b> pesos mensuales, así como hay
 								departamentos que cobran más de <b>150 mil</b>. Sin embargo, la propiedad de precio 
-								medio cuesta <b>25,800</b>mensuales. Ahora, cuando se busca rentar, es importante considerar
+								medio cuesta <b>25,800</b> mensuales. Ahora, cuando se busca rentar, es importante considerar
 								cuánto se está dispuesto a pagar, pero también lo que se está recibiendo a cambio de ese precio.
 								Es distinto pagar 20 mil pesos por un inmueble con un cuarto, que pagarlos por un lugar
 								con 4 cuartos que se pueden compartir con otras personas. El precio medio de un cuarto es de 
@@ -306,7 +306,7 @@
 
 							</p>
 							<p>
-								Liga al repositorio con el código: <a href=https://github.com/OmarPolC/Analisis_Inmuebles_CDMX>Análisis Inmuebles</a>
+								Liga al repositorio con el código: <a href=https://github.com/OmarPolC/Analisis_Inmuebles_CDMX target="_blank">Análisis Inmuebles</a>
 
 
 
