--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/desigualdad.jpg" class="image fit thumb"><img src="images/thumbs/desigualdad.jpg" alt="" /></a>
-								<a href="proyecto3.html" target="_blank">Exploración de clases sociales en México con SQL</a>
+								<a href="https://github.com/OmarPolC/Exploracion_Socioeconomica/blob/main/Exploraci%C3%B3n%20Estratos%20Socioecon%C3%B3micos.sql" target="_blank">Exploración de clases sociales en México con SQL</a>
 								<p>Obtuve datos de la Encuesta Nacional de Ingresos y Gastos de los Hogares 2020, 
 									realizada por el INEGI. Utilicé PostgreSQL para consultar la base de datos y 
 									explorar las diferencias sociales, económicas y laborales entre los mexicanos.  
