--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<p>Usé el API de Spotify y el módulo Spotipy para obtener una
 									muestra aleatoria de 1800 canciones de Rock de seis décadas desde los 1970s hasta 
 									los 2020s. Utilicé estadística inferencial para obtener conclusiones acerca de 
-									la población y realicé un modelo de regresión lineal y otro de regresión logística.
+									la población y realicé un modelo de regresión lineal.
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -74,6 +74,18 @@
 									explorar las diferencias sociales, económicas y laborales entre los mexicanos.  
 								</p>
 							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/thumbs/hipoteca.jpg" class="image fit thumb"><img src="images/thumbs/hipoteca.jpg" alt="" /></a>
+								<a href="https://app.powerbi.com/reportEmbed?reportId=a81334e7-72f0-47f1-9e55-cd8e9de5fa82&autoAuth=true&ctid=44467e6f-462c-4ea2-823f-7800de5434e3" target="_blank">Simulación de Crédito Hipotecario con Power BI</a>
+								<p>Utilicé el registro de tasas promedio de interés de hipotecas de tasa fija
+									de la Federal Reserve de Estados Unidos para hacer un dashboard en Power BI que simula
+									una tabla de amortización en función del plazo y la fecha de inicio de la 
+									hipoteca. 
+								</p>
+							</article>
+
+
+
 						</div>
 						
 					</section>
